syntax = "proto3";
option java_multiple_files = true;
package com.messaging.bootNode.stubs;

message BootstrapBootNodeRequest {
    string addr = 1;
}
message BootstrapBootNodeResponse {
    map<string, bool> routingTable = 1;
}

message BootstrapPeerNodeRequest {
    string addr = 1;
}

message BootstrapPeerNodeResponse {
    map<string, bool> routingTable = 1;
}

service BootNodeService {
    rpc bootstrapBootNode(BootstrapBootNodeRequest) returns (BootstrapBootNodeResponse);
    rpc bootstrapPeerNode(BootstrapPeerNodeRequest) returns (BootstrapPeerNodeResponse);
}