syntax = "proto3";
option java_multiple_files = true;
package com.messaging.peerNode.stubs;


message SendMessageRequest {
    string message = 1;
    uint32 targetPort = 2;
}

message SendMessageResponse {
}

message RegisterPeerNodeRequest {
    uint32 port = 1;
}

message RegisterPeerNodeResponse {
    bool registered = 1;
}

service PeerNodeService {
    rpc sendMessage(SendMessageRequest) returns (SendMessageResponse);
    rpc registerPeerNode(RegisterPeerNodeRequest) returns (RegisterPeerNodeResponse);
}